--- a/config.ini
+++ b/config.ini
@@ -25,7 +25,7 @@ EC50_base = 3.0             # Base EC50 for analgesia [mg/L]
 n_Hill = 1.2                # Hill coefficient (sigmoidicity)
 
 [Tolerance]
-kin = 0.10                  # Tolerance induction rate [1/h]
+kin = 0.02                  # Tolerance induction rate [1/h]
 kout = 0.005                # Tolerance decay rate [1/h]
 EC50_signal = 2.0           # Signal midpoint for tolerance [mg/L]
 
@@ -37,6 +37,17 @@ Effect_resp_critical = 90.0 # Critical respiratory depression [%]
 [Dosing]
 initial_dose = 10.0         # Initial dose [mg]
 dosing_interval = 12.0      # Time between doses [h]
+
+[Behavior]
+# Petri Net / Discrete Behavioral Parameters
+assessment_interval = 12.0          # Patient assessment period [h]
+effect_relief_threshold = 60.0      # Effect needed for pain relief [%]
+motivation_threshold = 1.5          # Motivation needed to trigger dose increase
+motivation_pain_rate = 0.1          # Rate of motivation accumulation per pain level
+motivation_dose_reduction = 2.0     # Motivation reduction after dosing
+min_dosing_interval = 6.0           # Minimum time between doses [h]
+base_escalation_factor = 0.02       # Base dose escalation (10%)
+tolerance_escalation_factor = 0.03  # Additional escalation per tolerance unit (15%)
 
 [Simulation]
 duration = 720.0            # Total simulation time [h] (30 days = 720h)
