--- a/models/config_aggressive.ini
+++ b/models/config_aggressive.ini
@@ -38,6 +38,17 @@ Effect_resp_critical = 90.0
 initial_dose = 15.0         # Higher starting dose
 dosing_interval = 12.0
 
+[Behavior]
+# More aggressive behavioral parameters
+assessment_interval = 12.0
+effect_relief_threshold = 60.0
+motivation_threshold = 1.5
+motivation_pain_rate = 0.1
+motivation_dose_reduction = 2.0
+min_dosing_interval = 6.0
+base_escalation_factor = 0.15       # More aggressive base escalation (15%)
+tolerance_escalation_factor = 0.20  # Higher tolerance-driven escalation (20%)
+
 [Simulation]
 duration = 240.0            # 10 days only - expect crisis sooner
 step_min = 0.01
