update pain logic

--- a/models/config_aggressive.ini
+++ b/models/config_aggressive.ini
@@ -1,57 +1,54 @@
-# Scenario: AGGRESSIVE ESCALATION - Fast tolerance development
-# This configuration accelerates tolerance to observe the deadly spiral faster
 
-[Absorption]
-ka = 2.0
+[SCENARIO]
+name=Scenario B2: Aggressive Escalation
+description=Higher escalation factor. Demonstrates faster spiral to saturation.
+enabled=true
 
-[Distribution]
-Vd = 28.0
-Vp = 105.0
-kcp = 0.3
-kpc = 0.4
+[PHARMACOKINETICS]
+ka=2.0
+Vd=14.0
+Vp=52.5
+kcp=0.3
+kpc=0.4
+Vmax=4.0
+Km=2.0
+keo=0.5
+tau_e=2.0
 
-[Elimination]
-# Lower Vmax and Km to reach saturation faster
-Vmax = 8.0                  # Reduced metabolic capacity
-Km = 1.5                    # Lower saturation threshold
+[PHARMACODYNAMICS]
+Emax=0.95
+EC50_base=3.0
+n_Hill=1.2
+EC50_signal=0.5
 
-[EffectSite]
-keo = 0.5
-tau_e = 2.0
+[TOLERANCE]
+kin=0.08
+kout=0.003
 
-[Pharmacodynamics]
-Emax = 95.0
-EC50_base = 3.0
-n_Hill = 1.2
+[DOSING]
+initial_dose=10.0
+dosing_interval=12.0
 
-[Tolerance]
-kin = 0.20                  # DOUBLED tolerance induction (builds very fast)
-kout = 0.005                # Same slow decay
-EC50_signal = 2.0
+[BEHAVIOR]
+petri_net_enabled=true
+assessment_interval=12.0
+relief_threshold=0.60
+effect_relief_threshold=60.0
 
-[Toxicity]
-C_toxic = 12.0              # Lower toxic threshold
-C_critical = 40.0           # Lower critical threshold
-Effect_resp_critical = 90.0
+[SIMULATION]
+duration_hours=360
+output_interval=1.0
+C_toxic=15.0
+C_critical=50.0
+Effect_resp_critical=0.95
 
-[Dosing]
-initial_dose = 15.0         # Higher starting dose
-dosing_interval = 12.0
+[ESCALATION]
+base_escalation_factor=0.20
+tolerance_escalation_factor=0.25
 
-[Behavior]
-# More aggressive behavioral parameters
-assessment_interval = 12.0
-effect_relief_threshold = 60.0
-motivation_threshold = 1.5
-motivation_pain_rate = 0.1
-motivation_dose_reduction = 2.0
-min_dosing_interval = 6.0
-base_escalation_factor = 0.15       # More aggressive base escalation (15%)
-tolerance_escalation_factor = 0.20  # Higher tolerance-driven escalation (20%)
-
-[Simulation]
-duration = 240.0            # 10 days only - expect crisis sooner
-step_min = 0.01
-step_max = 0.1
-accuracy = 1e-6
-output_interval = 2.0       # Output every 2 hours
+[TESTING]
+test_name=Aggressive Escalation
+expected_outcome=Faster spiral, death ~10-15d instead of 20-25d
+should_survive=false
+expected_max_dose_mg=200
+expected_time_to_death_hours=288
