--- a/config.ini
+++ b/config.ini
@@ -1,57 +1,62 @@
-# The Deadly Spiral - Simulation Configuration
-# All parameters can be modified to experiment with different scenarios
 
-[Absorption]
-ka = 2.0                    # Absorption rate constant [1/h]
+[SCENARIO]
+name=Scenario B: Deadly Spiral (Main)
+description=Tolerance-driven escalation with metabolic saturation. Observe fatal cascade.
+enabled=true
 
-[Distribution]
-Vd = 28.0                   # Central volume of distribution [L] (0.4 L/kg * 70 kg)
-Vp = 105.0                  # Peripheral volume [L] (1.5 L/kg * 70 kg)
-kcp = 0.3                   # Central to peripheral rate [1/h]
-kpc = 0.4                   # Peripheral to central rate [1/h]
+[PHARMACOKINETICS]
+# Absorption
+ka=2.0
 
-[Elimination]
-# Michaelis-Menten parameters - CRITICAL FOR DEADLY SPIRAL
-Vmax = 10.0                 # Maximum elimination rate [mg/h]
-Km = 2.0                    # Michaelis constant [mg/L]
+# Distribution (optimized for saturation demonstration)
+Vd=14.0
+Vp=52.5
+kcp=0.3
+kpc=0.4
 
-[EffectSite]
-keo = 0.5                   # Effect-site equilibration rate [1/h]
-tau_e = 2.0                 # Effect-site lag time [h]
+# Elimination: SATURATION PARAMETERS (critical for nonlinear behavior)
+Vmax=4.0
+Km=2.0
 
-[Pharmacodynamics]
-Emax = 95.0                 # Maximum effect [%]
-EC50_base = 3.0             # Base EC50 for analgesia [mg/L]
-n_Hill = 1.2                # Hill coefficient (sigmoidicity)
+# Effect site
+keo=0.5
+tau_e=2.0
 
-[Tolerance]
-kin = 0.02                  # Tolerance induction rate [1/h]
-kout = 0.005                # Tolerance decay rate [1/h]
-EC50_signal = 2.0           # Signal midpoint for tolerance [mg/L]
+[PHARMACODYNAMICS]
+Emax=0.95
+EC50_base=3.0
+n_Hill=1.2
+EC50_signal=0.5
 
-[Toxicity]
-C_toxic = 15.0              # Toxic concentration threshold [mg/L]
-C_critical = 50.0           # Critical overdose concentration [mg/L]
-Effect_resp_critical = 90.0 # Critical respiratory depression [%]
+[TOLERANCE]
+kin=0.08
+kout=0.003
 
-[Dosing]
-initial_dose = 10.0         # Initial dose [mg]
-dosing_interval = 12.0      # Time between doses [h]
+[DOSING]
+initial_dose=10.0
+dosing_interval=12.0
 
-[Behavior]
-# Petri Net / Discrete Behavioral Parameters
-assessment_interval = 12.0          # Patient assessment period [h]
-effect_relief_threshold = 60.0      # Effect needed for pain relief [%]
-motivation_threshold = 1.5          # Motivation needed to trigger dose increase
-motivation_pain_rate = 0.1          # Rate of motivation accumulation per pain level
-motivation_dose_reduction = 2.0     # Motivation reduction after dosing
-min_dosing_interval = 6.0           # Minimum time between doses [h]
-base_escalation_factor = 0.02       # Base dose escalation (10%)
-tolerance_escalation_factor = 0.03  # Additional escalation per tolerance unit (15%)
+[BEHAVIOR]
+petri_net_enabled=true
+assessment_interval=12.0
+relief_threshold=0.60
+effect_relief_threshold=60.0
 
-[Simulation]
-duration = 720.0            # Total simulation time [h] (30 days = 720h)
-step_min = 0.01             # Minimum integration step [h]
-step_max = 0.1              # Maximum integration step [h]
-accuracy = 1e-6             # Adaptive solver accuracy
-output_interval = 1.0       # Status monitoring interval [h]
+[SIMULATION]
+duration_hours=600
+output_interval=1.0
+C_toxic=15.0
+C_critical=50.0
+Effect_resp_critical=0.95
+
+[ESCALATION]
+base_escalation_factor=0.10
+tolerance_escalation_factor=0.15
+
+[TESTING]
+test_name=Deadly Spiral - Tolerance & Saturation
+expected_outcome=Linear growth 0-10d, acceleration 10-20d, catastrophic 20-25d, death ~21-25d
+should_survive=false
+expected_max_dose_mg=400
+expected_time_to_death_hours=504
+phase_transition_saturation_ratio=0.75
