--- a/models/config_poormetabolizer.ini
+++ b/models/config_poormetabolizer.ini
@@ -1,46 +1,57 @@
-# Scenario: GENETIC POLYMORPHISM - Low metabolic capacity (CYP variant)
-# Simulates patient with poor metabolizer phenotype
 
-[Absorption]
-ka = 1.5                    # Slightly slower absorption
+[SCENARIO]
+name=Scenario C: Poor Metabolizer (CYP3A4 deficiency)
+description=Reduced Vmax (40% of normal). Models 2-fold slower metabolism. Fast spiral.
+enabled=true
 
-[Distribution]
-Vd = 28.0
-Vp = 105.0
-kcp = 0.3
-kpc = 0.4
+[PHARMACOKINETICS]
+ka=2.0
+Vd=14.0
+Vp=52.5
+kcp=0.3
+kpc=0.4
 
-[Elimination]
-# Simulate CYP2D6 poor metabolizer
-Vmax = 5.0                  # 50% reduced metabolic capacity!
-Km = 2.5                    # Higher Km (less efficient enzyme)
+# REDUCED VMAX: simulates CYP3A4 poor metabolizer
+Vmax=1.6
+Km=2.0
 
-[EffectSite]
-keo = 0.5
-tau_e = 2.0
+keo=0.5
+tau_e=2.0
 
-[Pharmacodynamics]
-Emax = 95.0
-EC50_base = 2.5             # More sensitive to drug
-n_Hill = 1.2
+[PHARMACODYNAMICS]
+Emax=0.95
+EC50_base=3.0
+n_Hill=1.2
+EC50_signal=0.5
 
-[Tolerance]
-kin = 0.10
-kout = 0.005
-EC50_signal = 2.0
+[TOLERANCE]
+kin=0.08
+kout=0.003
 
-[Toxicity]
-C_toxic = 10.0              # Much lower toxicity threshold
-C_critical = 35.0
-Effect_resp_critical = 85.0 # More vulnerable to respiratory depression
+[DOSING]
+initial_dose=10.0
+dosing_interval=12.0
 
-[Dosing]
-initial_dose = 10.0         # Normal dose (dangerous for this patient!)
-dosing_interval = 12.0
+[BEHAVIOR]
+petri_net_enabled=true
+assessment_interval=12.0
+relief_threshold=0.60
+effect_relief_threshold=60.0
 
-[Simulation]
-duration = 360.0            # 15 days - expect problems early
-step_min = 0.01
-step_max = 0.1
-accuracy = 1e-6
-output_interval = 2.0
+[SIMULATION]
+duration_hours=360
+output_interval=1.0
+C_toxic=15.0
+C_critical=50.0
+Effect_resp_critical=0.95
+
+[ESCALATION]
+base_escalation_factor=0.10
+tolerance_escalation_factor=0.15
+
+[TESTING]
+test_name=Poor Metabolizer - Genetic Variation
+expected_outcome=Saturation entered earlier, death ~7-10d (genetic predisposition)
+should_survive=false
+expected_max_dose_mg=150
+expected_time_to_death_hours=192
