--- a/models/config_stable.ini
+++ b/models/config_stable.ini
@@ -1,45 +1,59 @@
-# Scenario: STABLE REGIME - No tolerance, steady state
-# This should reach equilibrium without escalation
 
-[Absorption]
-ka = 2.0
+[SCENARIO]
+name=Scenario A: Stable Dose (Control)
+description=Fixed 30mg morphine every 12h, no dose escalation. Verify steady-state.
+enabled=true
 
-[Distribution]
-Vd = 28.0
-Vp = 105.0
-kcp = 0.3
-kpc = 0.4
+[PHARMACOKINETICS]
+# Absorption
+ka=2.0
 
-[Elimination]
-Vmax = 15.0                 # Higher metabolic capacity
-Km = 2.0
+# Distribution (adjusted for proper accumulation)
+Vd=14.0
+Vp=52.5
+kcp=0.3
+kpc=0.4
 
-[EffectSite]
-keo = 0.5
-tau_e = 2.0
+# Elimination (ADJUSTED: Vmax reduced to allow saturation demonstration)
+Vmax=4.0
+Km=2.0
 
-[Pharmacodynamics]
-Emax = 95.0
-EC50_base = 3.0
-n_Hill = 1.2
+# Effect site
+keo=0.5
+tau_e=2.0
 
-[Tolerance]
-kin = 0.02                  # Very slow tolerance development
-kout = 0.01                 # Faster decay - tolerance doesn't accumulate
-EC50_signal = 2.0
+[PHARMACODYNAMICS]
+Emax=0.95
+EC50_base=3.0
+n_Hill=1.2
+EC50_signal=0.5
 
-[Toxicity]
-C_toxic = 20.0              # Higher thresholds
-C_critical = 60.0
-Effect_resp_critical = 95.0
+[TOLERANCE]
+kin=0.08
+kout=0.003
 
-[Dosing]
-initial_dose = 8.0          # Lower starting dose
-dosing_interval = 12.0
+[DOSING]
+initial_dose=30.0
+dosing_interval=12.0
 
-[Simulation]
-duration = 720.0            # 30 days
-step_min = 0.01
-step_max = 0.1
-accuracy = 1e-6
-output_interval = 6.0       # Output every 6 hours (less verbose)
+[BEHAVIOR]
+petri_net_enabled=false
+assessment_interval=12.0
+relief_threshold=0.60
+effect_relief_threshold=60.0
+
+[SIMULATION]
+duration_hours=720
+output_interval=1.0
+C_toxic=15.0
+C_critical=50.0
+Effect_resp_critical=0.95
+
+[ESCALATION]
+base_escalation_factor=0.0
+tolerance_escalation_factor=0.0
+
+[TESTING]
+test_name=Stable Dose Verification
+expected_outcome=Steady-state C ~0.8-1.2 mg/L, Effect ~70%, Tol ~0.6
+should_survive=true
