add new models, fix simulation time

--- a/models/config_aggressive.ini
+++ b/models/config_aggressive.ini
@@ -1,54 +1,53 @@
-
-[SCENARIO]
-name=Scenario B2: Aggressive Escalation
-description=Higher escalation factor. Demonstrates faster spiral to saturation.
-enabled=true
-
 [PHARMACOKINETICS]
 ka=2.0
-Vd=14.0
-Vp=52.5
+Vd=25.0
+Vp=90.0
 kcp=0.3
 kpc=0.4
-Vmax=4.0
+Vmax=8.0
 Km=2.0
 keo=0.5
 tau_e=2.0
 
 [PHARMACODYNAMICS]
-Emax=0.95
-EC50_base=3.0
-n_Hill=1.2
-EC50_signal=0.5
+Emax=95.0
+EC50_base=0.35       # GOOD initial potency - relief at start
+n_Hill=2.5           # Steep but not insane
+EC50_signal=0.7      # Moderate tolerance signal onset
 
 [TOLERANCE]
-kin=0.08
-kout=0.003
+kin=0.015            # MODERATE buildup (2-day half-life)
+kout=0.004           # SLOW decay (7-day half-life)
 
 [DOSING]
 initial_dose=10.0
 dosing_interval=12.0
 
 [BEHAVIOR]
-petri_net_enabled=true
-assessment_interval=12.0
-relief_threshold=0.60
-effect_relief_threshold=60.0
+relief_threshold=0.70          # ACHIEVABLE initially
+effect_relief_threshold=70.0   # Patient feels relief
+motivation_threshold=1.5       # Moderate patience
+motivation_pain_rate=0.12      # Moderate pain-driven urgency
+motivation_dose_reduction=1.5  # Moderate reset
+motivation_decay_rate=0.04     # Moderate decay
+min_dosing_interval=6.0
+
+# ACCELERATING escalation
+base_escalation_factor=0.12           # 12% base
+tolerance_escalation_factor=0.18      # 18% per Tol unit
 
 [SIMULATION]
-duration_hours=360
+duration=2000.0    # ~83 days, full spiral arc
+step_min=0.01
+step_max=0.1
+accuracy=1e-6
 output_interval=1.0
-C_toxic=15.0
-C_critical=50.0
-Effect_resp_critical=0.95
 
-[ESCALATION]
-base_escalation_factor=0.20
-tolerance_escalation_factor=0.25
+# Moderate toxicity thresholds
+C_toxic=8.0
+C_critical=16.0
+Effect_resp_critical=88.0
 
-[TESTING]
-test_name=Aggressive Escalation
-expected_outcome=Faster spiral, death ~10-15d instead of 20-25d
-should_survive=false
-expected_max_dose_mg=200
-expected_time_to_death_hours=288
+naloxone_available=0
+naloxone_effective_window=5.0
+naloxone_blockade_strength=0.4
