--- a/models/config_stable.ini
+++ b/models/config_stable.ini
@@ -1,59 +1,67 @@
-
-[SCENARIO]
-name=Scenario A: Stable Dose (Control)
-description=Fixed 30mg morphine every 12h, no dose escalation. Verify steady-state.
-enabled=true
-
 [PHARMACOKINETICS]
 # Absorption
 ka=2.0
-
-# Distribution (adjusted for proper accumulation)
-Vd=14.0
-Vp=52.5
+# Distribution (more realistic for 70kg human)
+Vd=28.0
+Vp=105.0
 kcp=0.3
 kpc=0.4
-
-# Elimination (ADJUSTED: Vmax reduced to allow saturation demonstration)
-Vmax=4.0
+# Elimination: Michaelis-Menten (spiral-friendly but not instant death)
+Vmax=10.0
 Km=2.0
-
 # Effect site
 keo=0.5
 tau_e=2.0
-
 [PHARMACODYNAMICS]
-Emax=0.95
-EC50_base=3.0
-n_Hill=1.2
-EC50_signal=0.5
+# Emax in PERCENT, because effect logic uses %
+Emax=95.0
+EC50_base=0.5
+n_Hill=1.5
+# Midpoint for tolerance signal, in-line with your older config
+EC50_signal=1.0
 
 [TOLERANCE]
-kin=0.08
-kout=0.003
+# Slightly slower induction than your current kin=0.08
+kin=0.01
+kout=0.005
 
 [DOSING]
-initial_dose=30.0
+initial_dose=10.0
 dosing_interval=12.0
 
 [BEHAVIOR]
-petri_net_enabled=false
+# Enable behavioral Petri net for spiral
+petri_net_enabled=1
+
+# Assessment / relief thresholds in hours and %
 assessment_interval=12.0
-relief_threshold=0.60
-effect_relief_threshold=60.0
+relief_threshold=0.60          # (note: currently unused, kept for clarity)
+effect_relief_threshold=60.0   # effect % for “relief”
+
+# Motivation dynamics (match old behavior block)
+motivation_threshold=1.5
+motivation_pain_rate=0.1
+motivation_dose_reduction=2.0
+motivation_decay_rate=0.05
+min_dosing_interval=6.0
+
+# Escalation factors (10% base + 15% per Tol unit, as in thesis)
+base_escalation_factor=0.10
+tolerance_escalation_factor=0.15
 
 [SIMULATION]
-duration_hours=720
+duration=1440.0          # Total simulation time [h]
+step_min=0.01
+step_max=0.1
+accuracy=1e-6
 output_interval=1.0
+
+# Toxicity and respiratory depression thresholds
 C_toxic=15.0
 C_critical=50.0
-Effect_resp_critical=0.95
+Effect_resp_critical=90.0
 
-[ESCALATION]
-base_escalation_factor=0.0
-tolerance_escalation_factor=0.0
-
-[TESTING]
-test_name=Stable Dose Verification
-expected_outcome=Steady-state C ~0.8-1.2 mg/L, Effect ~70%, Tol ~0.6
-should_survive=true
+# Naloxone (optional, can leave disabled)
+naloxone_available=0
+naloxone_effective_window=5.0   # minutes, as in code comment
+naloxone_blockade_strength=0.4
