add nalaxone option

--- a/models/config_naloxone_failed.ini
+++ b/models/config_naloxone_failed.ini
@@ -1,3 +1,6 @@
+# Naloxone Failed Rescue Configuration
+# Tests scenario where rescue window is too short (delayed response)
+
 [PHARMACOKINETICS]
 ka=3.0
 Vd=0.6
@@ -5,15 +8,15 @@ Vp=2.0
 kcp=0.6
 kpc=0.8
 Vmax=1.5
-Km=1.5           # INCREASED from 0.2 (7.5x)
+Km=1.5
 keo=0.2
 tau_e=0.5
 
 [PHARMACODYNAMICS]
 Emax=100.0
-EC50_base=0.8    # INCREASED from 0.1 (8x)
+EC50_base=0.8
 n_Hill=4.0
-EC50_signal=3.2  # INCREASED from 0.4 (8x)
+EC50_signal=3.2
 
 [TOLERANCE]
 kin=0.040
@@ -36,16 +39,19 @@ tolerance_escalation_factor=0.65
 
 [SIMULATION]
 duration=150.0
-step_min=0.001     # ALLOW SMALLER STEPS
+step_min=0.001
 step_max=0.1
-accuracy=1e-5      # SLIGHTLY RELAXED
+accuracy=1e-5
 output_interval=1.0
 
 [TOXICITY]
-C_toxic=15.0      # SCALED UP
-C_critical=40.0   # SCALED UP
+C_toxic=15.0
+C_critical=40.0
 Effect_resp_critical=99.5
-naloxone_available=0
-naloxone_response_delay=0.083    # 5 minutes (default)
-naloxone_effective_window=5.0
+
+# NALOXONE AVAILABLE BUT WITH DELAYED RESPONSE
+# Simulates delayed emergency response - rescue fails
+naloxone_available=1
+naloxone_response_delay=0.6      # 36 minutes (too slow!)
+naloxone_effective_window=0.5    # 30 minutes window
 naloxone_blockade_strength=0.4
